<resources>
    <string name="app_name">QuanLyCoffe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hint_name">Full Name</string>
    <string name="menu_gallery">Danh sách bàn</string>
    <string name="menu_home">Sửa thực đơn</string>
    <string name="menu_slideshow">Danh sách món ăn</string>
    <string name="menu_tools">Gọi món</string>
    <string name="menu_share">Help</string>
    <string name="menu_send">About</string>
    <string name="soluong">Vui lòng nhập vào số lượng.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">Sign in</string>
</resources>
